added background image to index.html

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LAMP STACK PROJECT</title>
 </head>
-<body>
+<body style="background-image: url('website_image.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
     
 </body>
 </html>
